# AI_search_engine_for_website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  amazon_products.csv  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  search_engine.py  search_engine_fastapi.py  search_engine_streamlit.py
.devcontainer/: devcontainer.json
app/: __init__.py  config.py  main.py  schemas.py  search.py  sql_source.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
